[project]
name = "abn-lookup-service"
version = "0.1.2"
description = "A python client to interact with ABN Lookup services"
authors = [{name = "Tom McKeesick", email = "tmck01@gmail.com"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.13.1"

dependencies = [
    "requests>=2.31.0",
    "xmltodict>=0.13.0",
    "laser-prynter>=0.2.6",
]

[dependency-groups]
tests = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "requests-mock>=1.11.0",
]

[project.scripts]
abn-lookup-service = "abn_lookup_service.lookup:main"

[project.urls]
Homepage = "https://github.com/tmck-code/abn-lookup-service"
Issues = "https://github.com/tmck-code/abn-lookup-service/issues"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
check_untyped_defs = true
files = ["abn_lookup_service/"]
